feat: 가계부 날짜용 LedgerDateVO 추가 - BudgetBookController.java   - getBudgetDetailPage 메서드에서 type 변수 미사용으로 삭제
- WriteController.java
  - getStep2Page 메서드에서 날짜값 검증 로직 추가
  - getStep2Page 메서드에서 catch문의 주석 제거

- BudgetBookService.java
  - getWriteByData 메서드에서 date 매개변수를 String으로 변경
  - getBudgetBookById 메서드에서 formatDateAsString 메서드로 날짜 포맷 로직 추가
  - updateBudgetBook 메서드에서 toEntity 메서드로 Entity 객체 매핑
  - updateBudgetBook 메서드에서 이미지변경 실행 조건 로직 수정

- ImageServiceImpl.java
  - makeDirectory 메서드에서 year 매개변수 int로 변경

- BudgetBookDao.java
  - saveBudgetBook, findBudgetBookById 메서드에서 bookDate를 LedgerDate 객체로 변경

- Ledger.java
  - 가계부 날짜를 LedgerDateVO 객체로 변경
  - LedgerDateVO 클래스 내부 date를 바로 얻을 수 있는 메서드 추가

- LedgerFilterRequest.java
  - PeriodSearchVO 클래스로 대체되어 삭제

- LedgerDateTest 테스트 코드 추가